# onefinity-firmware

./: .gitignore  CHANGELOG.md  DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  MANIFEST.in  MODERNIZATION_PLAN.md  Makefile  PR_SUMMARY.md  RASPBERRY_PI_5_IMPLEMENTATION.md  README.md  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: build-debian-package.yml  build-rpi-image.yml  build-test.yml  release.yml  tag.yml
.github/workflows/scripts/: build-rpi-image.sh
debian/: changelog  control  copyright  postinst  prerm  rules
docs/: bbdev-chroot.md  cross_compile_rpi_kernel_module.md  development.md  emu_chroot.md  raspberry_pi_5_support.md
scripts/: OBSOLETE_SCRIPTS.md  avr109-flash.py  bbctrl.service  gplan-build-native.sh  gplan-init-build.sh  setup_rpi.sh
src/bbserial/: Makefile  bbserial.c
src/py/bbctrl/: Planner.py  gpio_compat.py
src/py/camotics/: __init__.py
src/svelte-components/: package-lock.json  package.json
tests/: test_gpio_compat.py
