[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bbctrl"
version = "1.6.7"
description = "Buildbotics Machine Controller"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Joseph Coffland", email = "joseph@buildbotics.org"}
]
maintainers = [
    {name = "OneFinity CNC", email = "info@onefinitycnc.com"}
]
keywords = ["cnc", "controller", "machine-control", "buildbotics"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "tornado>=6.4,<7.0",
    "sockjs-tornado>=1.0.7,<2.0",
    "pyserial>=3.5,<4.0",
    "pyudev>=0.24,<0.25",
    "smbus2>=0.5,<0.6",
    "watchdog>=6.0,<7.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0.0,<25.0",
    "ruff>=0.8.0,<1.0",
    "mypy>=1.13.0,<2.0",
    "pytest>=8.0.0,<9.0",
    "pytest-cov>=6.0.0,<7.0",
]

[project.urls]
Homepage = "https://onefinitycnc.com/"
Repository = "https://github.com/eisenhowerj/onefinity-firmware"
"Bug Tracker" = "https://github.com/eisenhowerj/onefinity-firmware/issues"

[project.scripts]
bbctrl = "bbctrl:run"

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["src/py"]

[tool.setuptools.package-data]
bbctrl = ["http/**/*"]
camotics = ["*.so"]

# Black configuration
[tool.black]
line-length = 88
target-version = ["py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | node_modules
)/
'''

# Ruff configuration
[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src/py"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.lint.isort]
known-first-party = ["bbctrl", "inevent", "lcd", "camotics", "iw_parse"]

# Mypy configuration
[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "tornado.*",
    "sockjs.tornado.*",
    "serial.*",
    "pyudev.*",
    "smbus2.*",
    "watchdog.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
]
testpaths = ["tests"]
pythonpath = ["src/py"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Coverage configuration
[tool.coverage.run]
source = ["src/py"]
omit = [
    "*/tests/*",
    "*/test_*.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
